Add creation option

--- a/src/main/resources/templates/sbu/jsf/new.html
+++ b/src/main/resources/templates/sbu/jsf/new.html
@@ -23,6 +23,7 @@
     </script>
   </div>
   <script th:inline="javascript" defer>
+    document.getElementsByTagName('body')[0].removeAttribute('style');
     htmx.process(document.getElementById(/*[[${ajaxTargetId}]]*/ null));
   </script>
 </div>
