--- a/src/main/resources/templates/sbu/jsf/show-edit.html
+++ b/src/main/resources/templates/sbu/jsf/show-edit.html
@@ -1,15 +1,16 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
 <div th:fragment="bs5"
-  th:with="item=${__${@webModelAttributes.ITEM_NAME}__}, queryConfig=${__${@webModelAttributes.QUERY_CONFIG_NAME}__}, user=${__${'@' + @webModelAttributes.USER_NAME}__}, ajaxTargetId=${ajaxTargetId ?: @webModelAttributes.AJAX_TARGET_ID_VALUE}, backTargetId=${backTargetId ?: ajaxTargetId}, embeddedTargetId=${embeddedTargetId ?: ajaxTargetId}, backable=${backable ?: true}"
+  th:with="item=${__${@webModelAttributes.ITEM_NAME}__}, queryConfig=${__${@webModelAttributes.QUERY_CONFIG_NAME}__}, user=${__${'@' + @webModelAttributes.USER_NAME}__}, ajaxTargetId=${ajaxTargetId ?: _ajaxTargetId ?: @webModelAttributes.AJAX_TARGET_ID_VALUE}, backTargetId=${backTargetId ?: _backTargetId ?: ajaxTargetId}, embeddedTargetId=${embeddedTargetId ?: _embeddedTargetId ?: ajaxTargetId}, backPath=${backPath ?: _backPath}"
   class="card">
   <div class="card-header">
     <div class="d-flex">
-      <button th:if="${backable}" hx:get="${item.getBackPath(queryConfig)}"
+      <button
+        hx:get="@{${backPath != null ? backPath : item.getBackPath(queryConfig)}(_ajaxTargetId=${ajaxTargetId}, _backTargetId=${backTargetId}, _backPath=${backPath})}"
         hx:target="${'#' + backTargetId}" hx-ext="json-enc" type="button" class="me-auto btn-close"
         aria-label="Close"></button>
       <a th:if="${user == null || user.canUpdate(item)}" class="pe-2 orange"
-        hx:get="@{${item.getEditPath(queryConfig)}(ajaxTargetId=${embeddedTargetId}, backTargetId=${backTargetId})}"
+        hx:get="@{${item.getEditPath(queryConfig)}(_ajaxTargetId=${embeddedTargetId}, _backTargetId=${backTargetId}, _backPath=${backPath})}"
         hx:target="${'#' + embeddedTargetId}" hx-ext="json-enc">
         <i class="fas fa-edit"></i></a>
     </div>
@@ -19,11 +20,9 @@
       method="GET" ajax:target="${ajaxTargetId}" disabled="true">
       <div></div>
     </react-form>
-    <th:block th:unless="${item.hasBackPathname}">
-      <a class="btn btn-light" hx:get="${item.getBackPath(queryConfig)}"
-        hx:target="${'#' + backTargetId}" hx-ext="json-enc">
-        [[${#messages.msgOrNull('sbu.ui.return') ?: 'Return'}]]</a>
-    </th:block>
+    <a class="btn btn-light" hx:get="${backPath != null ? backPath : item.getBackPath(queryConfig)}"
+      hx:target="${'#' + backTargetId}" hx-ext="json-enc">
+      [[${#messages.msgOrNull('sbu.ui.return') ?: 'Return'}]]</a>
 
     <div
       th:if="${T(com.github.wnameless.spring.boot.up.attachment.AttachmentSnapshotAware).isAssignableFrom(item.class)}"
