--- a/src/main/resources/templates/sbu/jsf/show.html
+++ b/src/main/resources/templates/sbu/jsf/show.html
@@ -1,22 +1,23 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
 <div th:fragment="bs5"
-  th:with="item=${__${@webModelAttributes.ITEM_NAME}__}, queryConfig=${__${@webModelAttributes.QUERY_CONFIG_NAME}__}, ajaxTargetId=${ajaxTargetId ?: @webModelAttributes.AJAX_TARGET_ID_VALUE}, backTargetId=${backTargetId ?: ajaxTargetId}, backable=${backable ?: true}"
+  th:with="item=${__${@webModelAttributes.ITEM_NAME}__}, queryConfig=${__${@webModelAttributes.QUERY_CONFIG_NAME}__}, ajaxTargetId=${ajaxTargetId ?: _ajaxTargetId ?: @webModelAttributes.AJAX_TARGET_ID_VALUE}, backTargetId=${backTargetId ?: _backTargetId ?: ajaxTargetId}, backPath=${backPath ?: _backPath}"
   class="card">
-  <div class="card-header" th:if="${backable}">
-    <button hx:get="${item.getBackPath(queryConfig)}" hx:target="${'#' + backTargetId}"
-      hx-ext="json-enc" type="button" class="me-auto btn-close" aria-label="Close"></button>
+  <div class="card-header">
+    <button
+      hx:get="@{${backPath != null ? backPath : item.getBackPath(queryConfig)}(_ajaxTargetId=${ajaxTargetId}, _backTargetId=${backTargetId}, _backPath=${backPath})}"
+      hx:target="${'#' + backTargetId}" hx-ext="json-enc" type="button" class="me-auto btn-close"
+      aria-label="Close"></button>
   </div>
   <div class="card-body" th:with="rid=${(T(java.lang.Math).random() * 2147483647).intValue()}">
     <react-form th:id="${'showForm' + rid}" th:action="${item.backPath}" method="GET"
       ajax:target="${ajaxTargetId}" disabled="true">
       <div></div>
     </react-form>
-    <th:block th:unless="${item.hasBackPathname}">
-      <a class="btn btn-light" hx:get="${item.getBackPath(queryConfig)}"
-        hx:target="${'#' + backTargetId}" hx-ext="json-enc">
-        [[${#messages.msgOrNull('sbu.ui.return') ?: 'Return'}]]</a>
-    </th:block>
+    <a class="btn btn-light"
+      hx:get="@{${backPath != null ? backPath : item.getBackPath(queryConfig)}(_ajaxTargetId=${ajaxTargetId}, _backTargetId=${backTargetId}, _backPath=${backPath})}"
+      hx:target="${'#' + backTargetId}" hx-ext="json-enc">
+      [[${#messages.msgOrNull('sbu.ui.return') ?: 'Return'}]]</a>
 
     <div
       th:if="${T(com.github.wnameless.spring.boot.up.attachment.AttachmentSnapshotAware).isAssignableFrom(item.class)}"
