--- a/src/main/resources/templates/sbu/jsf/resources.html
+++ b/src/main/resources/templates/sbu/jsf/resources.html
@@ -10,7 +10,17 @@
   <link href="/react-form/css/glyphicon.min.css" rel="stylesheet" />
 
   <!-- Webpack -->
-  <script src="/react-form/webpack/main.js" defer></script>
+  <script src="/react-form/bs/main.js" defer></script>
+</th:block>
+
+<th:block th:fragment="all-mui">
+  <!-- Htmx -->
+  <script src="https://unpkg.com/htmx.org@1.9.6"></script>
+  <script src="https://unpkg.com/htmx.org@1.9.6/dist/ext/json-enc.js"></script>
+  <script src="https://unpkg.com/htmx.org@1.9.6/dist/ext/ajax-header.js"></script>
+
+  <!-- Webpack -->
+  <script src="/react-form/mui/main.js" defer></script>
 </th:block>
 
 </html>
