--- a/src/main/resources/templates/sbu/jsf/resources.html
+++ b/src/main/resources/templates/sbu/jsf/resources.html
@@ -7,10 +7,10 @@
   <script src="https://unpkg.com/htmx.org@1.9.6/dist/ext/ajax-header.js"></script>
 
   <!-- Glyphicon -->
-  <link href="/react-form/css/glyphicon.min.css" rel="stylesheet" />
+  <link th:href="@{/react-form/css/glyphicon.min.css}" rel="stylesheet" />
 
   <!-- Webpack -->
-  <script src="/react-form/bs/main.js" defer></script>
+  <script th:src="@{/react-form/bs/main.js}" defer></script>
 </th:block>
 
 <th:block th:fragment="all-mui">
@@ -20,7 +20,7 @@
   <script src="https://unpkg.com/htmx.org@1.9.6/dist/ext/ajax-header.js"></script>
 
   <!-- Webpack -->
-  <script src="/react-form/mui/main.js" defer></script>
+  <script th:src="@{/react-form/mui/main.js}" defer></script>
 </th:block>
 
 </html>
