Fix datatable delete url

--- a/src/main/resources/templates/sbu/web/datatable.html
+++ b/src/main/resources/templates/sbu/web/datatable.html
@@ -161,7 +161,7 @@
               </li>
               <li>
                 <a th:classappend="${user == null || user.canDelete(item)} ? 'text-danger' : 'disabled'"
-                  hx:delete="${item.getDeletePath(queryConfig)}"
+                  hx:delete="@{${item.getDeletePath(queryConfig)}}"
                   hx:confirm="${#messages.msgOrNull('sbu.ui.confirmation.delete') ?: 'Are you sure?'}"
                   hx:target="${'#' + ajaxTargetId}" hx-ext="json-enc" class="dropdown-item">
                   [[${#messages.msgOrNull('sbu.ui.delete') ?: 'Delete'}]]</a>
