--- a/src/main/resources/templates/sbu/web/datatable.html
+++ b/src/main/resources/templates/sbu/web/datatable.html
@@ -45,6 +45,8 @@
         class="row g-3" hx:get="@{${route.indexPath}}" hx:target="${'#' + ajaxTargetId}"
         hx-ext="json-enc">
         <!--   <form class="row g-3" method="GET" th:action="@{${route.indexPath}}"> -->
+
+        <!-- Start: Fields for querying -->
         <th:block th:each="field : ${queryConfig.fields}">
           <div class="col-8">
             <label class="form-label" th:if="${#messages.msgOrNull('sbu.web.datatable.field.' + itemClass.simpleName + '.' +
@@ -58,8 +60,22 @@
               field) ?:
               field}]]
             </label>
-            <input th:name="${field}" type="text" class="form-control"
-              th:value="${queryConfig.getFieldQueryString(field)}">
+            <!-- With select option -->
+            <th:block th:if="${queryConfig.getFilterFields.get(field).hasSelectOption}">
+              <select th:name="${field}" class="form-select">
+                <option></option>
+                <option th:each="opt : ${queryConfig.getFilterFields.get(field).selectOption}"
+                  th:value="${opt.value}"
+                  th:selected="${queryConfig.getFieldQueryString(field) eq opt.value}">
+                  [[${opt.key}]]
+                </option>
+              </select>
+            </th:block>
+            <!-- Without select option -->
+            <th:block th:unless="${queryConfig.getFilterFields.get(field).hasSelectOption}">
+              <input th:name="${field}" type="text" class="form-control"
+                th:value="${queryConfig.getFieldQueryString(field)}">
+            </th:block>
           </div>
           <div class="col-4">
             <th:block th:if="${queryConfig.getFieldSortName(field)}">
@@ -83,6 +99,7 @@
             </th:block>
           </div>
         </th:block>
+        <!-- End: Fields for querying -->
 
         <div class="col-12 input-group mb-3">
           <button class="btn btn-outline-secondary"
