--- a/src/main/resources/templates/sbu/fsm/bookmark.html
+++ b/src/main/resources/templates/sbu/fsm/bookmark.html
@@ -3,8 +3,10 @@
 <div th:fragment="bs5" class="container-fluid">
   <div class="btn-group" role="group"
     th:with="ajaxTargetId=${ajaxTargetId ?: _ajaxTargetId ?: @webModelAttributes.AJAX_TARGET_ID_VALUE}">
-    <button type="button" class="btn btn-secondary" hx:get="@{${item.indexPath}}" hx-ext="json-enc"
-      hx:target="${'#' + ajaxTargetId}">All</button>
+    <button type="button" class="btn btn-outline-secondary" hx:get="@{${item.indexPath}}"
+      hx-ext="json-enc" hx:target="${'#' + ajaxTargetId}">
+      <i class="fas fa-reply-all fa-fw"></i>
+    </button>
     <button th:block th:each="s : ${item.phase.allStates}" type="button"
       class="btn btn-outline-secondary"
       th:classappend="${(param['stateRecord.state'] != null) and (param['stateRecord.state'][0] eq s.displayName)} ? 'active'"
